cross platform affinity setting done. need verification.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,8 @@
-all:
-	$(CC) -o producer producer.cpp
+all: worker main.cpp
+	$(CC) -o main main.cpp
+
+worker: worker.cpp
+	$(CC) -c -o worker.o worker.cpp
+
+clean:
+	rm -f main
