--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 all: worker main.cpp
-	$(CC) -o main main.cpp
+	$(CXX) -o main main.cpp worker.o
 
 worker: worker.cpp
-	$(CC) -c -o worker.o worker.cpp
+	$(CXX) -c -o worker.o worker.cpp
 
 clean:
 	rm -f main
