changes from linux side

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 all: worker main.cpp
-	$(CXX) -o main main.cpp worker.o
+	$(CXX) -pthread -o main main.cpp worker.o
 
 worker: worker.cpp
 	$(CXX) -c -o worker.o worker.cpp
